--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,53 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Legal Disclaimer | Wevolv3</title>
   <meta name="description" content="Wevolv3 Legal Disclaimer - Important information about our services, content, and limitations of liability." />
-  <link rel="icon" href="/images/favicon.png" type="image/png" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon.png" type="image/png" />
+  <link href="css/normalize.css" rel="stylesheet" type="text/css" />
+  <link href="css/layout.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
   <style>
-    body {
-      font-family: 'Orbitron', monospace;
-      background: #000000;
-      color: #ffffff;
+    .legal-content {
+      color: #fff;
+      line-height: 1.8;
+      max-width: 800px;
+      margin: 0 auto;
     }
-    .gradient-text {
-      background: linear-gradient(135deg, #10b981, #3b82f6, #8b5cf6, #10b981);
-      background-size: 300% 300%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      animation: gradient-move 10s ease infinite;
+    .legal-content h2 {
+      font-size: 24px;
+      font-weight: 600;
+      color: #fff;
+      margin-top: 40px;
+      margin-bottom: 20px;
+      font-family: Clashdisplay, sans-serif;
     }
-    @keyframes gradient-move {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    .legal-content p {
+      margin-bottom: 15px;
+      color: #fff;
+    }
+    .legal-content ul {
+      margin: 15px 0;
+      padding-left: 30px;
+    }
+    .legal-content li {
+      margin-bottom: 10px;
+      color: #fff;
+    }
+    .legal-content a {
+      color: #fff;
+      text-decoration: underline;
+    }
+    .legal-content strong {
+      font-weight: 600;
     }
   </style>
 </head>
-<body class="min-h-screen">
-  <!-- Header -->
-  <header class="border-b border-white/10 py-6 px-4">
-    <div class="max-w-7xl mx-auto flex items-center justify-between">
-      <a href="/" class="text-2xl font-bold gradient-text">Wevolv3</a>
-      <nav class="flex gap-6">
-        <a href="/" class="hover:text-primary transition-colors">Home</a>
-        <a href="/blog" class="hover:text-primary transition-colors">Blog</a>
-        <a href="/contact" class="hover:text-primary transition-colors">Contact</a>
-      </nav>
-    </div>
-  </header>
-
+<body>
   <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-4 py-12">
-    <h1 class="text-5xl font-bold mb-8 gradient-text">Legal Disclaimer</h1>
-    <p class="text-gray-400 mb-8">Last updated: January 2025</p>
+  <div class="w-layout-blockcontainer main-container w-container" style="padding-top: 100px; padding-bottom: 60px;">
+    <h1 class="main-title" style="text-align: center; margin-bottom: 30px;">Legal Disclaimer</h1>
+    <p style="text-align: center; color: #fff; margin-bottom: 50px; opacity: 0.7;">Last updated: January 2025</p>
 
-    <div class="space-y-8 text-gray-200 leading-relaxed">
+    <div class="legal-content">
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">1. General Information</h2>
+        <h2>1. General Information</h2>
         <p>
           The information on this website (wevolv3.com) is provided on an "as is" basis. 
           To the fullest extent permitted by law, Wevolv3 excludes all representations, 
@@ -60,7 +62,7 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">2. No Professional Advice</h2>
+        <h2>2. No Professional Advice</h2>
         <p>
           The content on this website is for informational purposes only and does not 
           constitute professional advice. Wevolv3 does not provide financial, legal, 
@@ -70,7 +72,7 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">3. Affiliate Links and Recommendations</h2>
+        <h2>3. Affiliate Links and Recommendations</h2>
         <p>
           This website may contain affiliate links. Wevolv3 may receive compensation 
           for purchases made through these links. However, this does not influence our 
@@ -80,7 +82,7 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">4. Limitation of Liability</h2>
+        <h2>4. Limitation of Liability</h2>
         <p>
           Wevolv3 shall not be liable for any indirect, incidental, special, consequential, 
           or punitive damages, or any loss of profits or revenues, whether incurred directly 
@@ -90,7 +92,7 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">5. External Links</h2>
+        <h2>5. External Links</h2>
         <p>
           This website may contain links to external websites. Wevolv3 is not responsible 
           for the content, privacy policies, or practices of any third-party websites.
@@ -98,7 +100,7 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">6. Web3 and Cryptocurrency Disclaimer</h2>
+        <h2>6. Web3 and Cryptocurrency Disclaimer</h2>
         <p>
           Information regarding Web3, blockchain technology, and cryptocurrencies on this 
           website is for informational purposes only. Cryptocurrency investments carry 
@@ -109,7 +111,7 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">7. Changes to This Disclaimer</h2>
+        <h2>7. Changes to This Disclaimer</h2>
         <p>
           We reserve the right to modify this disclaimer at any time. Changes will be 
           effective immediately upon posting to this page.
@@ -117,33 +119,66 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">8. Contact</h2>
+        <h2>8. Contact</h2>
         <p>
           If you have any questions about this Legal Disclaimer, please contact us at:
         </p>
-        <p class="mt-2">
+        <p>
           <strong>Email:</strong> contact@wevolv3.com<br>
-          <strong>Website:</strong> <a href="https://wevolv3.com" class="text-primary hover:underline">wevolv3.com</a>
+          <strong>Website:</strong> <a href="https://wevolv3.com">wevolv3.com</a>
         </p>
       </section>
     </div>
-  </main>
+  </div>
 
   <!-- Footer -->
-  <footer class="border-t border-white/10 mt-20 py-12 px-4">
-    <div class="max-w-7xl mx-auto">
-      <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-6">
-        <p class="text-gray-500">&copy; 2025 Wevolv3. All rights reserved.</p>
-        <div class="flex gap-6 text-sm">
-          <a href="/privacy" class="text-gray-400 hover:text-primary transition-colors">Privacy Policy</a>
-          <a href="/terms" class="text-gray-400 hover:text-primary transition-colors">Terms</a>
-          <a href="/disclaimer" class="text-gray-400 hover:text-primary transition-colors">Disclaimer</a>
-          <a href="/about" class="text-gray-400 hover:text-primary transition-colors">About</a>
-          <a href="/contact" class="text-gray-400 hover:text-primary transition-colors">Contact</a>
+  <div class="footer">
+    <div class="w-layout-blockcontainer main-container w-container">
+      <div class="inner-footer">
+        <a data-w-id="darkyn02" href="mailto:contact@wevolv3.com" class="mail-link">contact@wevolv3.com</a>
+        <a data-w-id="darkyn03" href="https://t.me/wevolv3" target="_blank" class="phone-link">@wevolv3</a>
+        <div data-w-id="darkyn04" class="socials">
+          <a href="https://x.com/wevolv3" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">X</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">linkedin</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="https://wevolv3.com" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">website</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="https://t.me/wevolv3" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">telegram</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="blog.html" class="social-link last-social w-inline-block">
+            <div class="social-text">blog</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+        </div>
+      </div>
+      
+      <!-- Footer Legal Links -->
+      <div class="footer-legal-links">
+        <a href="privacy.html" class="legal-link">Privacy Policy</a>
+        <span class="legal-separator">|</span>
+        <a href="terms.html" class="legal-link">Terms & Conditions</a>
+        <span class="legal-separator">|</span>
+        <a href="disclaimer.html" class="legal-link">Legal Disclaimer</a>
+      </div>
+      
+      <div class="copyright">
+        <div data-w-id="darkyn05" class="copyright-text">
+          2025 Wevolv3. All rights reserved.
+        </div>
+        <div data-w-id="darkyn06" class="right-copyright">
+          <a href="#home" class="backtotop w-inline-block"><img src="images/back-top_1back-top.png" alt="" /></a>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
 </body>
 </html>
-
