--- a/terms.html
+++ b/terms.html
@@ -5,62 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms and Conditions | Wevolv3</title>
   <meta name="description" content="Wevolv3 Terms and Conditions - Read our terms of service and usage policies." />
-  <link rel="icon" href="/images/favicon.png" type="image/png" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon.png" type="image/png" />
+  <link href="css/normalize.css" rel="stylesheet" type="text/css" />
+  <link href="css/layout.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
   <style>
-    body {
-      font-family: 'Orbitron', monospace;
-      background: #000000;
-      color: #ffffff;
+    .legal-content {
+      color: #fff;
+      line-height: 1.8;
+      max-width: 800px;
+      margin: 0 auto;
     }
-    .gradient-text {
-      background: linear-gradient(135deg, #10b981, #3b82f6, #8b5cf6, #10b981);
-      background-size: 300% 300%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      animation: gradient-move 10s ease infinite;
+    .legal-content h2 {
+      font-size: 24px;
+      font-weight: 600;
+      color: #fff;
+      margin-top: 40px;
+      margin-bottom: 20px;
+      font-family: Clashdisplay, sans-serif;
     }
-    @keyframes gradient-move {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    .legal-content p {
+      margin-bottom: 15px;
+      color: #fff;
+    }
+    .legal-content ul {
+      margin: 15px 0;
+      padding-left: 30px;
+    }
+    .legal-content li {
+      margin-bottom: 10px;
+      color: #fff;
+    }
+    .legal-content a {
+      color: #fff;
+      text-decoration: underline;
+    }
+    .legal-content strong {
+      font-weight: 600;
     }
   </style>
 </head>
-<body class="min-h-screen">
-  <!-- Header -->
-  <header class="border-b border-white/10 py-6 px-4">
-    <div class="max-w-7xl mx-auto flex items-center justify-between">
-      <a href="/" class="text-2xl font-bold gradient-text">Wevolv3</a>
-      <nav class="flex gap-6">
-        <a href="/" class="hover:text-primary transition-colors">Home</a>
-        <a href="/blog" class="hover:text-primary transition-colors">Blog</a>
-        <a href="/contact" class="hover:text-primary transition-colors">Contact</a>
-      </nav>
-    </div>
-  </header>
-
+<body>
   <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-4 py-12">
-    <h1 class="text-5xl font-bold mb-8 gradient-text">Terms and Conditions</h1>
-    <p class="text-gray-400 mb-8">Last updated: January 2025</p>
+  <div class="w-layout-blockcontainer main-container w-container" style="padding-top: 100px; padding-bottom: 60px;">
+    <h1 class="main-title" style="text-align: center; margin-bottom: 30px;">Terms and Conditions</h1>
+    <p style="text-align: center; color: #fff; margin-bottom: 50px; opacity: 0.7;">Last updated: January 2025</p>
 
-    <div class="space-y-8 text-gray-200 leading-relaxed">
+    <div class="legal-content">
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">1. Agreement to Terms</h2>
+        <h2>1. Agreement to Terms</h2>
         <p>
           By accessing and using wevolv3.com (the "Website"), you accept and agree to be bound by the terms and provision of this agreement. If you do not agree to abide by the above, please do not use this service.
         </p>
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">2. Use License</h2>
-        <p class="mb-3">Permission is granted to temporarily access the materials on Wevolv3's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
-        <ul class="list-disc pl-6 space-y-2">
+        <h2>2. Use License</h2>
+        <p>Permission is granted to temporarily access the materials on Wevolv3's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
+        <ul>
           <li>Modify or copy the materials</li>
           <li>Use the materials for any commercial purpose or for any public display</li>
           <li>Attempt to reverse engineer any software contained on the website</li>
@@ -69,74 +71,108 @@
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">3. Disclaimer</h2>
+        <h2>3. Disclaimer</h2>
         <p>
           The materials on Wevolv3's website are provided on an 'as is' basis. Wevolv3 makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
         </p>
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">4. Limitations</h2>
+        <h2>4. Limitations</h2>
         <p>
           In no event shall Wevolv3 or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on Wevolv3's website, even if Wevolv3 or a Wevolv3 authorized representative has been notified orally or in writing of the possibility of such damage.
         </p>
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">5. Accuracy of Materials</h2>
+        <h2>5. Accuracy of Materials</h2>
         <p>
           The materials appearing on Wevolv3's website could include technical, typographical, or photographic errors. Wevolv3 does not warrant that any of the materials on its website are accurate, complete, or current. Wevolv3 may make changes to the materials contained on its website at any time without notice.
         </p>
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">6. Links</h2>
+        <h2>6. Links</h2>
         <p>
           Wevolv3 has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Wevolv3 of the site. Use of any such linked website is at the user's own risk.
         </p>
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">7. Modifications</h2>
+        <h2>7. Modifications</h2>
         <p>
           Wevolv3 may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.
         </p>
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">8. Governing Law</h2>
+        <h2>8. Governing Law</h2>
         <p>
           These terms and conditions are governed by and construed in accordance with applicable laws. Any disputes relating to these terms and conditions shall be subject to the exclusive jurisdiction of the courts in the applicable jurisdiction.
         </p>
       </section>
 
       <section>
-        <h2 class="text-2xl font-bold text-white mb-4">9. Contact Information</h2>
+        <h2>9. Contact Information</h2>
         <p>
           If you have any questions about these Terms and Conditions, please contact us at:
         </p>
-        <p class="mt-2">
-          <strong>Email:</strong> contato@wevolv3.com<br>
-          <strong>Website:</strong> <a href="https://wevolv3.com" class="text-primary hover:underline">wevolv3.com</a>
+        <p>
+          <strong>Email:</strong> contact@wevolv3.com<br>
+          <strong>Website:</strong> <a href="https://wevolv3.com">wevolv3.com</a>
         </p>
       </section>
     </div>
-  </main>
+  </div>
 
   <!-- Footer -->
-  <footer class="border-t border-white/10 mt-20 py-12 px-4">
-    <div class="max-w-7xl mx-auto">
-      <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-6">
-        <p class="text-gray-500">&copy; 2024 Wevolv3. All rights reserved.</p>
-        <div class="flex gap-6 text-sm">
-          <a href="/privacy" class="text-gray-400 hover:text-primary transition-colors">Privacy Policy</a>
-          <a href="/terms" class="text-gray-400 hover:text-primary transition-colors">Terms</a>
-          <a href="/about" class="text-gray-400 hover:text-primary transition-colors">About</a>
-          <a href="/contact" class="text-gray-400 hover:text-primary transition-colors">Contact</a>
+  <div class="footer">
+    <div class="w-layout-blockcontainer main-container w-container">
+      <div class="inner-footer">
+        <a data-w-id="darkyn02" href="mailto:contact@wevolv3.com" class="mail-link">contact@wevolv3.com</a>
+        <a data-w-id="darkyn03" href="https://t.me/wevolv3" target="_blank" class="phone-link">@wevolv3</a>
+        <div data-w-id="darkyn04" class="socials">
+          <a href="https://x.com/wevolv3" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">X</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">linkedin</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="https://wevolv3.com" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">website</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="https://t.me/wevolv3" target="_blank" class="social-link w-inline-block">
+            <div class="social-text">telegram</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+          <a href="blog.html" class="social-link last-social w-inline-block">
+            <div class="social-text">blog</div>
+            <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
+          </a>
+        </div>
+      </div>
+      
+      <!-- Footer Legal Links -->
+      <div class="footer-legal-links">
+        <a href="privacy.html" class="legal-link">Privacy Policy</a>
+        <span class="legal-separator">|</span>
+        <a href="terms.html" class="legal-link">Terms & Conditions</a>
+        <span class="legal-separator">|</span>
+        <a href="disclaimer.html" class="legal-link">Legal Disclaimer</a>
+      </div>
+      
+      <div class="copyright">
+        <div data-w-id="darkyn05" class="copyright-text">
+          2025 Wevolv3. All rights reserved.
+        </div>
+        <div data-w-id="darkyn06" class="right-copyright">
+          <a href="#home" class="backtotop w-inline-block"><img src="images/back-top_1back-top.png" alt="" /></a>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
 </body>
 </html>
-
